Rename accounts link in sidebar

--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -55,7 +55,7 @@
                         <li class="nav-item">
                             <a class="nav-link {% if active_page == 'dashboard.accounts' %} active {% endif %}" href="{{ url_for('dashboard.accounts') }}">
                                 <span data-feather="book-open"></span>
-                                All Accounts
+                                Accounts
                             </a>
                         </li>
                     </ul>
